spinnaker/01-sample-spring-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-spring-svc
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    target: sample-spring-app
