spinnaker/01-sample-spring-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sample-spring-vs
spec:
  gateways:
    - toolchain/dxservice-gw
  hosts:
    - frontend.telekinesis.shop
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: sample-spring-svc
            port:
              number: 8080
